# mongodb-aggregations-examples

./: README.md
golang-example/: README.md  go.mod  main.go
python-example/: README.md  pyproject.toml
python-example/python_example/: main.py
python-example/seed/: seed.py
typescript-example/: README.md  main.ts  package-lock.json  package.json
