[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["Benjamin Davis <bmd-callisto@pm.me>"]
readme = "README.md"
packages = [{include = "python_example"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.2"
numpy = "^1.23.4"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
